# rust_postgres_docker

./: .env copy  .gitignore  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
db/: Dockerfile
db/init/: init.sql
